--- a/_about-mk-westwood/MK Westwood Photo Gallery/2025.md
+++ b/_about-mk-westwood/MK Westwood Photo Gallery/2025.md
@@ -5,3 +5,5 @@ variant: markdown
 description: ""
 third_nav_title: MK Westwood Photo Gallery
 ---
+### **2025**
+Follow us at Westwood Primary School [Facebook](https://www.facebook.com/westwood.primary) or [Instagram](https://www.instagram.com/westwoodprisch) to find out the latest happenings at MK@Westwood.
