{"message":"Update file: 2024.md","userId":"1163","fileName":"2024.md"}

--- a/_about-mk-westwood/MK Westwood Photo Gallery/2024.md
+++ b/_about-mk-westwood/MK Westwood Photo Gallery/2024.md
@@ -6,4 +6,30 @@ description: ""
 third_nav_title: MK Westwood Photo Gallery
 ---
 ### **2024**
-Follow us at Westwood Primary School [Facebook](https://www.facebook.com/westwood.primary) or [Instagram](https://www.instagram.com/westwoodprisch) to find out the latest happenings at MK@Westwood.
+#### **Chinese New Year Celebration**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/1IolSkdKBGe7A5S4dPBoCI3k6SF5Q_IxzKQblWwz4jsE/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **Family Day Celebration**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vS0Q032iFRyxP2H-rLgn8xJ7F62RDmfL9PV9m1VQ-MRrWf5AAbj_YRp4cuBRMjn3zTLrZ6Otj6-Rq_H/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **Hari Raya Celebration**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vRbuhZ68QJzYOmMg_vojDpIlYdOBL3jeUQPr7y2yS_w8-FdG40pKut4NoP0v8qhTw5namDPLXXDuiwT/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **K1 Learning Journey**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vShb5XdpfVpyD6mpt4We9xGeKmYppA1CHrjdPtyrm5h83J_kj0gmpWPv5KPdi-49VURf8NZ6XzFlDPX/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **K2 Learning Journey**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSKBDx1SM_08wAqIAmFc4Zw7--1KdmmYsi-kEN2XvdPlnXARlgIIy1TMWAr1RVF46tNNRodjvSlY1Bu/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **LIFE@MK 1**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQ9vZqWM9hdDpagcyimhAH2c0AhNjgLLw5iOrsMOBnbfrMczIdQ-2S_Zq5gNRZctcTqTn9_vlN9cfgk/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+
+#### **Parents' Tea Session (K2s)**
+
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQsl8qqBNSfIVSUDHeMBBMuCAv_55x4Z9oYhfs8ywjPrrWvbrdUdze6LeOzAf2fRYPee-gYuf5I6kMG/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
