{"message":"Update file: 2024.md","userId":"1163","fileName":"2024.md"}

--- a/_about-mk-westwood/MK Westwood Photo Gallery/2024.md
+++ b/_about-mk-westwood/MK Westwood Photo Gallery/2024.md
@@ -14,22 +14,14 @@ third_nav_title: MK Westwood Photo Gallery
 
 <iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/1ANuj8k6YszU17ouqOp7yQHjmzS6dN0ORwRl1_KimEoo/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 
-#### **Family Day Celebration**
+#### **Racial Harmony Day**
 
 <iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vS0Q032iFRyxP2H-rLgn8xJ7F62RDmfL9PV9m1VQ-MRrWf5AAbj_YRp4cuBRMjn3zTLrZ6Otj6-Rq_H/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 
-#### **K1 Learning Journey**
+#### **Deepavali**
 
-<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vShb5XdpfVpyD6mpt4We9xGeKmYppA1CHrjdPtyrm5h83J_kj0gmpWPv5KPdi-49VURf8NZ6XzFlDPX/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/19G9pkIW6SMsJLiWHlPND9B0AdswpDvJ9R_l0ans2OJE/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
 
-#### **K2 Learning Journey**
+#### **K2 Celebrates**
 
-<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vSKBDx1SM_08wAqIAmFc4Zw7--1KdmmYsi-kEN2XvdPlnXARlgIIy1TMWAr1RVF46tNNRodjvSlY1Bu/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
-
-#### **LIFE@MK 1**
-
-<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQ9vZqWM9hdDpagcyimhAH2c0AhNjgLLw5iOrsMOBnbfrMczIdQ-2S_Zq5gNRZctcTqTn9_vlN9cfgk/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
-
-#### **Parents' Tea Session (K2s)**
-
-<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/e/2PACX-1vQsl8qqBNSfIVSUDHeMBBMuCAv_55x4Z9oYhfs8ywjPrrWvbrdUdze6LeOzAf2fRYPee-gYuf5I6kMG/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
+<iframe allowfullscreen="true" width="800" height="450" frameborder="0" src="https://docs.google.com/presentation/d/1_CVCkOYdt41wSGLrjqPPSv0yFjoUF-ZvhDmlwvZXaEo/embed?start=false&amp;loop=false&amp;delayms=3000"></iframe>
