{"message":"Update file: 2025.md","userId":"1163","fileName":"2025.md"}

--- a/_about-mk-westwood/Highlights/2025.md
+++ b/_about-mk-westwood/Highlights/2025.md
@@ -5,3 +5,7 @@ variant: markdown
 description: ""
 third_nav_title: Highlights
 ---
+### **2025**
+#### **Coming Soon**
+
+Open House 2024 was held on 17 February where we welcomed parents to tour the MK learning environment and spe
