{"message":"Update file: 2025.md","userId":"1163","fileName":"2025.md"}

--- a/_about-mk-westwood/MK Westwood Photo Gallery/2025.md
+++ b/_about-mk-westwood/MK Westwood Photo Gallery/2025.md
@@ -8,4 +8,4 @@ third_nav_title: MK Westwood Photo Gallery
 ### **2025**
 #### **Coming Soon**
 
-Open House 2024 was held on 17 February where we welcomed parents to tour the MK learning environment and spe
+Follow us at Westwood Primary School [Facebook](https://www.facebook.com/westwood.primary) or [Instagram](https://www.instagram.com/westwoodprisch) to find out the latest happenings at MK@Westwood.
