{"message":"Update file: 2025.md","userId":"1163","fileName":"2025.md"}

--- a/_about-westwood/Westwood Photo Gallery/2025.md
+++ b/_about-westwood/Westwood Photo Gallery/2025.md
@@ -5,3 +5,7 @@ variant: markdown
 description: ""
 third_nav_title: Westwood Photo Gallery
 ---
+### **2025**
+
+#### **Events &amp; Memories**
+<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/PXk8n2mCcXU" height="450" width="800"></iframe><br>
