{"message":"Update file: 2025.md","userId":"1163","fileName":"2025.md"}

--- a/_about-westwood/Westwood Photo Gallery/2025.md
+++ b/_about-westwood/Westwood Photo Gallery/2025.md
@@ -7,5 +7,16 @@ third_nav_title: Westwood Photo Gallery
 ---
 ### **2025**
 
-#### **Events &amp; Memories**
-<iframe allowfullscreen="" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" frameborder="0" title="YouTube video player" src="https://www.youtube.com/embed/PXk8n2mCcXU" height="450" width="800"></iframe><br>
+#### **Prize Giving Days**
+
+**19th Nov 2025 - Upper Primary Consortium**
+
+[20th Nov 2025 - Lower Primary Consortium](https://drive.google.com/drive/folders/1s-aDUomtJvTSa7l_4Jt05nzYHXg-aBBA?usp=sharing)
+
+[20th Nov 2025 - Middle Primary Consortium](https://drive.google.com/drive/folders/1I-AinYBr0TIEBMgUlqZnDsX5Ec2Bv_HG?usp=sharing)
+
+[19th Nov 2025 - Upper Primary Consortium](https://drive.google.com/drive/folders/14z0xURivc14x4FhVLD_1Y09T3uv_Lo8X)
+
+*Note 1: Dear Parents, kindly look for pictures of your children by clicking the relevant links above. You will be able to download the individual pictures for safekeeping. If opening the links on your mobile, your downloaded pictures will appear in your Gallery.*
+
+*Note 2: Pictures will only be available for download till end January 2026.*
