{"message":"Update file: 2025.md","userId":"1163","fileName":"2025.md"}

--- a/_about-westwood/Westwood Photo Gallery/2025.md
+++ b/_about-westwood/Westwood Photo Gallery/2025.md
@@ -9,9 +9,9 @@ third_nav_title: Westwood Photo Gallery
 
 #### **Prize Giving Days**
 
-[Lower Primary Consortium - 20th Nov 2025](https://drive.google.com/drive/folders/1s-aDUomtJvTSa7l_4Jt05nzYHXg-aBBA?usp=sharing)
-[Middle Primary Consortium - 20th Nov 2025](https://drive.google.com/drive/folders/1I-AinYBr0TIEBMgUlqZnDsX5Ec2Bv_HG?usp=sharing)
-[Upper Primary Consortium - 19th Nov 2025](https://drive.google.com/drive/folders/14z0xURivc14x4FhVLD_1Y09T3uv_Lo8X)
+[Lower Primary Consortium - 20th Nov 2025](https://drive.google.com/drive/folders/1s-aDUomtJvTSa7l_4Jt05nzYHXg-aBBA?usp=sharing)<br>
+[Middle Primary Consortium - 20th Nov 2025](https://drive.google.com/drive/folders/1I-AinYBr0TIEBMgUlqZnDsX5Ec2Bv_HG?usp=sharing)<br>
+[Upper Primary Consortium - 19th Nov 2025](https://drive.google.com/drive/folders/14z0xURivc14x4FhVLD_1Y09T3uv_Lo8X)<br>
 
 *Note 1: Dear Parents, kindly look for pictures of your children by clicking the relevant links above. You will be able to download the individual pictures for safekeeping. If opening the links on your mobile, your downloaded pictures will appear in your Gallery.*
 
