--- a/_about-westwood/Westwood Photo Gallery/2025.md
+++ b/_about-westwood/Westwood Photo Gallery/2025.md
@@ -13,6 +13,6 @@ third_nav_title: Westwood Photo Gallery
 [Middle Primary Consortium - 20th Nov 2025](https://drive.google.com/drive/folders/1I-AinYBr0TIEBMgUlqZnDsX5Ec2Bv_HG?usp=sharing)<br>
 [Upper Primary Consortium - 19th Nov 2025](https://drive.google.com/drive/folders/14z0xURivc14x4FhVLD_1Y09T3uv_Lo8X)<br>
 
-*Note 1: Dear Parents, kindly look for pictures of your children by clicking the relevant links above. You will be able to download the individual pictures for safekeeping. If opening the links on your mobile, your downloaded pictures will appear in your Gallery.*
+*Note 1: Dear Parents, kindly look for pictures of your children by clicking the relevant links above. You will be able to download the individual pictures for safekeeping. If viewing the links on your mobile, your downloaded pictures will appear in your Gallery.*
 
-*Note 2: Pictures will only be available for download till end January 2026.*
+*Note 2: Pictures will only be available for download till end of January 2026.*
